--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Benis-bot</h1>
+      <h1 class="project-name">Benis-Bot</h1>
       <h2 class="project-tagline">A bot for the /kek/ room based on ChunkBot</h2>
       <a href="https://github.com/Goat-Party/Benis-Bot" class="btn">View on GitHub</a>
       <a href="https://github.com/Goat-Party/Benis-Bot/zipball/master" class="btn">Download .zip</a>
